Improving OpenAPI
